java/sdk/resourcemanager/azure-resourcemanager/src/test/resources/session-records/AzureResourceManagerTests.testRouteTables.json
{
  "Entries": [
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/routeTables?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:04 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "0bce49a9-f698-46c5-8d0a-57c4dbe3d65f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "727",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:06 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "9f0a8644-da3b-4531-9fa5-f1d34e4bcbb9",
        "x-ms-client-request-id": "0bce49a9-f698-46c5-8d0a-57c4dbe3d65f",
        "x-ms-correlation-request-id": "3388baac-3959-448e-baf9-944931afdef2",
        "x-ms-ratelimit-remaining-subscription-reads": "11964",
        "x-ms-request-id": "ced90642-22b9-438d-88dc-5bbbb5948c8e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060906Z:3388baac-3959-448e-baf9-944931afdef2"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "aks-agentpool-30971226-routetable",
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/MC_aks059993group_aks059993_eastus/providers/Microsoft.Network/routeTables/aks-agentpool-30971226-routetable",
            "etag": "W/\u0022eba44273-1807-4bca-a5e2-d8749e6c01e1\u0022",
            "type": "Microsoft.Network/routeTables",
            "location": "eastus",
            "tags": {
              "tag1": "value1"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "d6a9c637-1d15-4e97-8fcc-7c0466a4754a",
              "disableBgpRoutePropagation": false,
              "routes": [],
              "subnets": [
                {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/MC_aks059993group_aks059993_eastus/providers/Microsoft.Network/virtualNetworks/aks-vnet-30971226/subnets/aks-subnet"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/routeTables?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:06 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "63886029-4f95-4b23-973c-a302b2ff5a39",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "727",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:06 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "46bba0d6-366c-4ade-8bef-95623c6fef5e",
        "x-ms-client-request-id": "63886029-4f95-4b23-973c-a302b2ff5a39",
        "x-ms-correlation-request-id": "03074f6a-f1fd-435e-ba61-ce5333f014c7",
        "x-ms-ratelimit-remaining-subscription-reads": "11963",
        "x-ms-request-id": "a1be203e-26bb-4737-b689-06243936960d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060906Z:03074f6a-f1fd-435e-ba61-ce5333f014c7"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "aks-agentpool-30971226-routetable",
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/MC_aks059993group_aks059993_eastus/providers/Microsoft.Network/routeTables/aks-agentpool-30971226-routetable",
            "etag": "W/\u0022eba44273-1807-4bca-a5e2-d8749e6c01e1\u0022",
            "type": "Microsoft.Network/routeTables",
            "location": "eastus",
            "tags": {
              "tag1": "value1"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "d6a9c637-1d15-4e97-8fcc-7c0466a4754a",
              "disableBgpRoutePropagation": false,
              "routes": [],
              "subnets": [
                {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/MC_aks059993group_aks059993_eastus/providers/Microsoft.Network/virtualNetworks/aks-vnet-30971226/subnets/aks-subnet"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/rg84610f?api-version=2022-09-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:06 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.resources/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "81651879-dbe4-4c6d-bd28-9ca6f5fe1134",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "213",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "f871915c-33c0-4be2-b7df-81706aafdafa",
        "x-ms-ratelimit-remaining-subscription-writes": "1195",
        "x-ms-request-id": "f871915c-33c0-4be2-b7df-81706aafdafa",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060910Z:f871915c-33c0-4be2-b7df-81706aafdafa"
      },
      "ResponseBody": {
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f",
        "name": "rg84610f",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "416",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:10 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "9c5725bf-3126-4d2a-812a-72c3c2df5300",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "10.0.1.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1"
              },
              "name": "route1"
            },
            {
              "properties": {
                "addressPrefix": "10.0.0.0/29",
                "nextHopType": "VnetLocal"
              },
              "name": "route2"
            },
            {
              "properties": {
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal"
              },
              "name": "route_rt5358191690351746933"
            }
          ],
          "disableBgpRoutePropagation": true
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/08ef81cf-6e49-4318-a577-dad2bcacb7f9?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1657",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:11 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d18d62cb-7a58-43b0-ac0b-c2c3a2214406",
        "x-ms-client-request-id": "9c5725bf-3126-4d2a-812a-72c3c2df5300",
        "x-ms-correlation-request-id": "54ed0319-d97d-465f-9951-393c8ce96ad8",
        "x-ms-ratelimit-remaining-subscription-writes": "1194",
        "x-ms-request-id": "08ef81cf-6e49-4318-a577-dad2bcacb7f9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060911Z:54ed0319-d97d-465f-9951-393c8ce96ad8"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u00224d279a1a-027e-4cea-aab8-fc9d1327134b\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": true,
          "routes": [
            {
              "name": "route1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route1",
              "etag": "W/\u00224d279a1a-027e-4cea-aab8-fc9d1327134b\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u00224d279a1a-027e-4cea-aab8-fc9d1327134b\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u00224d279a1a-027e-4cea-aab8-fc9d1327134b\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/08ef81cf-6e49-4318-a577-dad2bcacb7f9?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:13 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "2ed35d38-e4ee-41e7-9b78-b4d79814e18d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:14 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7c79c0bf-d86f-4941-b0b1-2a9b6d823f99",
        "x-ms-client-request-id": "2ed35d38-e4ee-41e7-9b78-b4d79814e18d",
        "x-ms-correlation-request-id": "944c203e-7e25-4c06-9cd7-0a4f96455f8e",
        "x-ms-ratelimit-remaining-subscription-reads": "11990",
        "x-ms-request-id": "4a326680-753c-449c-bf84-6832d9905ac8",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060914Z:944c203e-7e25-4c06-9cd7-0a4f96455f8e"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:14 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "b9c25a4d-f059-4710-b6f2-03c464ece4ac",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1661",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:14 GMT",
        "ETag": "W/\u00221d79acde-3af8-4802-ad4a-08ecf11366b4\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6f7ccd08-c8fe-4090-b705-e60488ff08b6",
        "x-ms-client-request-id": "b9c25a4d-f059-4710-b6f2-03c464ece4ac",
        "x-ms-correlation-request-id": "693fea41-d6d3-4261-8107-0d4aaa561214",
        "x-ms-ratelimit-remaining-subscription-reads": "11989",
        "x-ms-request-id": "7edbf337-ada9-40b2-8f4f-5f24b16d154b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060914Z:693fea41-d6d3-4261-8107-0d4aaa561214"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u00221d79acde-3af8-4802-ad4a-08ecf11366b4\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": true,
          "routes": [
            {
              "name": "route1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route1",
              "etag": "W/\u00221d79acde-3af8-4802-ad4a-08ecf11366b4\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u00221d79acde-3af8-4802-ad4a-08ecf11366b4\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u00221d79acde-3af8-4802-ad4a-08ecf11366b4\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "352",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:15 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "ecbb69fa-4a1b-4aee-86d9-f286b1e72d07",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/22",
                "routeTable": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819"
                }
              },
              "name": "subnet1"
            }
          ]
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/add9aa27-e791-485f-94f4-bef30e7a8d2e?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1139",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:15 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6122adb1-6825-44ed-a52f-8bca543892bd",
        "x-ms-client-request-id": "ecbb69fa-4a1b-4aee-86d9-f286b1e72d07",
        "x-ms-correlation-request-id": "53e4c9b6-994b-4843-8830-c0d22f1e663d",
        "x-ms-ratelimit-remaining-subscription-writes": "1195",
        "x-ms-request-id": "add9aa27-e791-485f-94f4-bef30e7a8d2e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060916Z:53e4c9b6-994b-4843-8830-c0d22f1e663d"
      },
      "ResponseBody": {
        "name": "net62474f",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "etag": "W/\u0022ab6962bc-25bd-42e7-99fc-c1fb875d699b\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "48eb50a0-1ebc-4f81-bfec-0dae07d32fe5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "subnet1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "etag": "W/\u0022ab6962bc-25bd-42e7-99fc-c1fb875d699b\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/22",
                "routeTable": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/add9aa27-e791-485f-94f4-bef30e7a8d2e?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:19 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "18d2602e-611d-4c06-84eb-0d75959fff15",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:19 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "63350116-689d-48aa-a42c-b3823b1407c9",
        "x-ms-client-request-id": "18d2602e-611d-4c06-84eb-0d75959fff15",
        "x-ms-correlation-request-id": "0962d2fe-83e0-4501-970c-0bb729bd5f36",
        "x-ms-ratelimit-remaining-subscription-reads": "11924",
        "x-ms-request-id": "8fb5c57b-93c6-4f33-8837-39fd5e2bd50c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060919Z:0962d2fe-83e0-4501-970c-0bb729bd5f36"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:19 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "057682f5-30f7-4a6d-89e6-8890fa871d9f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1141",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:19 GMT",
        "ETag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f24a4e62-abcd-4fe3-8747-6a8b00c55e1c",
        "x-ms-client-request-id": "057682f5-30f7-4a6d-89e6-8890fa871d9f",
        "x-ms-correlation-request-id": "f30dc194-84ad-418e-9798-90637e18bf75",
        "x-ms-ratelimit-remaining-subscription-reads": "11923",
        "x-ms-request-id": "0521acdf-3ae2-4f39-b51a-c8587f6c5e12",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060920Z:f30dc194-84ad-418e-9798-90637e18bf75"
      },
      "ResponseBody": {
        "name": "net62474f",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "48eb50a0-1ebc-4f81-bfec-0dae07d32fe5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "subnet1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/22",
                "routeTable": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:20 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "307a5571-8a96-4490-994a-6516cf2b2dff",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1828",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:20 GMT",
        "ETag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8f8443a5-ea76-424c-8821-53f2930e876a",
        "x-ms-client-request-id": "307a5571-8a96-4490-994a-6516cf2b2dff",
        "x-ms-correlation-request-id": "5d19582a-1d0b-4ad8-8f4e-992ffcf0b6f8",
        "x-ms-ratelimit-remaining-subscription-reads": "11922",
        "x-ms-request-id": "4f1a9cc2-708a-4328-82fa-e1b7b7eb47e1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060920Z:5d19582a-1d0b-4ad8-8f4e-992ffcf0b6f8"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": true,
          "routes": [
            {
              "name": "route1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route1",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:20 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "34ba7734-3217-42e1-93f5-822b750247fd",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1141",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:20 GMT",
        "ETag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f8e63403-d710-489a-be4e-4010f7ef7f1c",
        "x-ms-client-request-id": "34ba7734-3217-42e1-93f5-822b750247fd",
        "x-ms-correlation-request-id": "38d16f45-eaba-4d1b-b348-8b4d274a61f7",
        "x-ms-ratelimit-remaining-subscription-reads": "11921",
        "x-ms-request-id": "1ab5f676-d4d7-4598-95f7-d83bc2834828",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060921Z:38d16f45-eaba-4d1b-b348-8b4d274a61f7"
      },
      "ResponseBody": {
        "name": "net62474f",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "48eb50a0-1ebc-4f81-bfec-0dae07d32fe5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "subnet1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/22",
                "routeTable": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:21 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "a7b42420-d832-451d-b360-a3ba78e6e889",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1141",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:21 GMT",
        "ETag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8ee1fa9f-24c1-43f9-9b17-6f5f9d3853a4",
        "x-ms-client-request-id": "a7b42420-d832-451d-b360-a3ba78e6e889",
        "x-ms-correlation-request-id": "6e72bb8d-71bd-4c62-a240-8695b85534e1",
        "x-ms-ratelimit-remaining-subscription-reads": "11920",
        "x-ms-request-id": "03766257-2798-4d9f-b525-8607dbb01c99",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060921Z:6e72bb8d-71bd-4c62-a240-8695b85534e1"
      },
      "ResponseBody": {
        "name": "net62474f",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "48eb50a0-1ebc-4f81-bfec-0dae07d32fe5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "subnet1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/22",
                "routeTable": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/routeTables?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:21 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "5c6ce017-4d75-4537-9062-1538098a3c53",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "2556",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:22 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "df202c72-a83c-4d21-8ca9-9f1aaa3ecc14",
        "x-ms-original-request-ids": [
          "d75ae769-d8b6-4861-99bf-fd5386469180",
          "4d145969-0b6b-4e45-9251-6aef7f0f4269"
        ],
        "x-ms-ratelimit-remaining-subscription-reads": "11919",
        "x-ms-request-id": "df202c72-a83c-4d21-8ca9-9f1aaa3ecc14",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060922Z:df202c72-a83c-4d21-8ca9-9f1aaa3ecc14"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "rt535819",
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
            "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
            "type": "Microsoft.Network/routeTables",
            "location": "westus",
            "tags": {},
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
              "disableBgpRoutePropagation": true,
              "routes": [
                {
                  "name": "route1",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route1",
                  "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "addressPrefix": "10.0.1.0/29",
                    "nextHopType": "VirtualAppliance",
                    "nextHopIpAddress": "10.1.1.1",
                    "hasBgpOverride": false
                  },
                  "type": "Microsoft.Network/routeTables/routes"
                },
                {
                  "name": "route2",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
                  "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "addressPrefix": "10.0.0.0/29",
                    "nextHopType": "VnetLocal",
                    "hasBgpOverride": false
                  },
                  "type": "Microsoft.Network/routeTables/routes"
                },
                {
                  "name": "route_rt5358191690351746933",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
                  "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "addressPrefix": "10.0.3.0/29",
                    "nextHopType": "VnetLocal",
                    "hasBgpOverride": false
                  },
                  "type": "Microsoft.Network/routeTables/routes"
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1"
                }
              ]
            }
          },
          {
            "name": "aks-agentpool-30971226-routetable",
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/MC_aks059993group_aks059993_eastus/providers/Microsoft.Network/routeTables/aks-agentpool-30971226-routetable",
            "etag": "W/\u0022eba44273-1807-4bca-a5e2-d8749e6c01e1\u0022",
            "type": "Microsoft.Network/routeTables",
            "location": "eastus",
            "tags": {
              "tag1": "value1"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "d6a9c637-1d15-4e97-8fcc-7c0466a4754a",
              "disableBgpRoutePropagation": false,
              "routes": [],
              "subnets": [
                {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/MC_aks059993group_aks059993_eastus/providers/Microsoft.Network/virtualNetworks/aks-vnet-30971226/subnets/aks-subnet"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/routeTables?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:22 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "76f643f6-36e5-4341-8058-eb8fe1796045",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "2556",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:22 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "bc448307-2db5-4449-ba0f-cae97d341874",
        "x-ms-original-request-ids": [
          "f48404e7-7538-4c1b-82b2-c8d93741ec9c",
          "40a3708f-8d9e-498e-8463-92ceb3183fa9"
        ],
        "x-ms-ratelimit-remaining-subscription-reads": "11918",
        "x-ms-request-id": "bc448307-2db5-4449-ba0f-cae97d341874",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060922Z:bc448307-2db5-4449-ba0f-cae97d341874"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "rt535819",
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
            "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
            "type": "Microsoft.Network/routeTables",
            "location": "westus",
            "tags": {},
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
              "disableBgpRoutePropagation": true,
              "routes": [
                {
                  "name": "route1",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route1",
                  "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "addressPrefix": "10.0.1.0/29",
                    "nextHopType": "VirtualAppliance",
                    "nextHopIpAddress": "10.1.1.1",
                    "hasBgpOverride": false
                  },
                  "type": "Microsoft.Network/routeTables/routes"
                },
                {
                  "name": "route2",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
                  "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "addressPrefix": "10.0.0.0/29",
                    "nextHopType": "VnetLocal",
                    "hasBgpOverride": false
                  },
                  "type": "Microsoft.Network/routeTables/routes"
                },
                {
                  "name": "route_rt5358191690351746933",
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
                  "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "addressPrefix": "10.0.3.0/29",
                    "nextHopType": "VnetLocal",
                    "hasBgpOverride": false
                  },
                  "type": "Microsoft.Network/routeTables/routes"
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1"
                }
              ]
            }
          },
          {
            "name": "aks-agentpool-30971226-routetable",
            "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/MC_aks059993group_aks059993_eastus/providers/Microsoft.Network/routeTables/aks-agentpool-30971226-routetable",
            "etag": "W/\u0022eba44273-1807-4bca-a5e2-d8749e6c01e1\u0022",
            "type": "Microsoft.Network/routeTables",
            "location": "eastus",
            "tags": {
              "tag1": "value1"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "d6a9c637-1d15-4e97-8fcc-7c0466a4754a",
              "disableBgpRoutePropagation": false,
              "routes": [],
              "subnets": [
                {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/MC_aks059993group_aks059993_eastus/providers/Microsoft.Network/virtualNetworks/aks-vnet-30971226/subnets/aks-subnet"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:23 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "73d03c15-cd56-4be1-8e88-9c3b87c6474c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1828",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:22 GMT",
        "ETag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0d46af34-8a8d-4bd3-a126-86874b1f736c",
        "x-ms-client-request-id": "73d03c15-cd56-4be1-8e88-9c3b87c6474c",
        "x-ms-correlation-request-id": "74d80bfb-40f0-4ac5-81af-b19e44f4cf35",
        "x-ms-ratelimit-remaining-subscription-reads": "11983",
        "x-ms-request-id": "ebd588b4-2c0d-464d-97ff-9fa7f6f7c4fa",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060923Z:74d80bfb-40f0-4ac5-81af-b19e44f4cf35"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": true,
          "routes": [
            {
              "name": "route1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route1",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:23 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "5265fda6-2ad0-41c7-8b3f-09ca21086657",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1828",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:23 GMT",
        "ETag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ede82c98-73be-40a6-ba2c-ff72daef5907",
        "x-ms-client-request-id": "5265fda6-2ad0-41c7-8b3f-09ca21086657",
        "x-ms-correlation-request-id": "e3022e5b-33a3-4b4a-9679-e4a4a2b1053f",
        "x-ms-ratelimit-remaining-subscription-reads": "11982",
        "x-ms-request-id": "b417fe65-effb-448b-8e8c-0dd22279b813",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060923Z:e3022e5b-33a3-4b4a-9679-e4a4a2b1053f"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": true,
          "routes": [
            {
              "name": "route1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route1",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u00220b0139fd-3764-4096-bda1-8898ff95abfe\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:23 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "49e6e18f-45aa-4774-a7be-fe5ef8a35038",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1141",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:23 GMT",
        "ETag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c4e7e73e-8089-42f4-a961-fe7a86730d9e",
        "x-ms-client-request-id": "49e6e18f-45aa-4774-a7be-fe5ef8a35038",
        "x-ms-correlation-request-id": "caedce68-1452-4220-a6bd-5ece508750ec",
        "x-ms-ratelimit-remaining-subscription-reads": "11981",
        "x-ms-request-id": "8bb0be40-f899-46d1-b0e6-dd08e80f20f6",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060924Z:caedce68-1452-4220-a6bd-5ece508750ec"
      },
      "ResponseBody": {
        "name": "net62474f",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "48eb50a0-1ebc-4f81-bfec-0dae07d32fe5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "subnet1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/22",
                "routeTable": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "1138",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:24 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "a706a5b6-78ac-47b8-9b7f-d28d496846ef",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "properties": {
                "addressPrefix": "50.46.112.0/29",
                "nextHopType": "Internet",
                "hasBgpOverride": false
              },
              "name": "route2",
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "properties": {
                "addressPrefix": "10.0.2.0/29",
                "nextHopType": "None"
              },
              "name": "route3"
            },
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "properties": {
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "name": "route_rt5358191690351746933",
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "properties": {
                "addressPrefix": "10.0.5.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1"
              },
              "name": "route_rt5358191690351764425"
            }
          ],
          "disableBgpRoutePropagation": false
        }
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/3ebc45d4-0d93-4d10-bdbb-21fe95bcbef9?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "2282",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d74a51ee-1718-458a-b1e6-3d6daf5eb1d8",
        "x-ms-client-request-id": "a706a5b6-78ac-47b8-9b7f-d28d496846ef",
        "x-ms-correlation-request-id": "ad3db16e-b814-4fd0-8ded-d92c317c68f4",
        "x-ms-ratelimit-remaining-subscription-writes": "1193",
        "x-ms-request-id": "3ebc45d4-0d93-4d10-bdbb-21fe95bcbef9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060925Z:ad3db16e-b814-4fd0-8ded-d92c317c68f4"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u0022bc019228-bd97-4513-9c88-a4cd8f89b942\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u0022bc019228-bd97-4513-9c88-a4cd8f89b942\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "50.46.112.0/29",
                "nextHopType": "Internet",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route3",
              "etag": "W/\u0022bc019228-bd97-4513-9c88-a4cd8f89b942\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.2.0/29",
                "nextHopType": "None",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u0022bc019228-bd97-4513-9c88-a4cd8f89b942\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351764425",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351764425",
              "etag": "W/\u0022bc019228-bd97-4513-9c88-a4cd8f89b942\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.5.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/3ebc45d4-0d93-4d10-bdbb-21fe95bcbef9?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:27 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "2ba34324-8876-4d5b-877f-ce92a6c380a6",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:27 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "bee99ded-624e-4119-a1b8-ebd71644b14d",
        "x-ms-client-request-id": "2ba34324-8876-4d5b-877f-ce92a6c380a6",
        "x-ms-correlation-request-id": "eb5f5a49-062f-4c05-b8fa-9bad94be5804",
        "x-ms-ratelimit-remaining-subscription-reads": "11916",
        "x-ms-request-id": "177097c1-3d9d-4f27-9120-9210af428074",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060928Z:eb5f5a49-062f-4c05-b8fa-9bad94be5804"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:28 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "c2e52442-3bf7-4c6c-8864-999a86970d1c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "2287",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:28 GMT",
        "ETag": "W/\u002213fc4585-f295-4656-9c6e-0f9c92bc523b\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "998a8f66-79d7-4dda-bb45-f1572ec02788",
        "x-ms-client-request-id": "c2e52442-3bf7-4c6c-8864-999a86970d1c",
        "x-ms-correlation-request-id": "e61b7738-7c61-47ac-9354-65effb81c427",
        "x-ms-ratelimit-remaining-subscription-reads": "11915",
        "x-ms-request-id": "eabdce41-0e98-4d0c-a446-182bca8fcf8b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060928Z:e61b7738-7c61-47ac-9354-65effb81c427"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u002213fc4585-f295-4656-9c6e-0f9c92bc523b\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u002213fc4585-f295-4656-9c6e-0f9c92bc523b\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "50.46.112.0/29",
                "nextHopType": "Internet",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route3",
              "etag": "W/\u002213fc4585-f295-4656-9c6e-0f9c92bc523b\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.2.0/29",
                "nextHopType": "None",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u002213fc4585-f295-4656-9c6e-0f9c92bc523b\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351764425",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351764425",
              "etag": "W/\u002213fc4585-f295-4656-9c6e-0f9c92bc523b\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.5.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:28 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "7b21c975-53f9-4c52-8dfc-1a90424a3903",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1141",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:28 GMT",
        "ETag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "97d15201-783b-4f75-8a98-f9ecd63ebdf7",
        "x-ms-client-request-id": "7b21c975-53f9-4c52-8dfc-1a90424a3903",
        "x-ms-correlation-request-id": "5f361b3c-2ca4-4179-b79b-a0ffd5c2c60b",
        "x-ms-ratelimit-remaining-subscription-reads": "11914",
        "x-ms-request-id": "11bf148f-f440-4033-83d6-8372e2022c15",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060928Z:5f361b3c-2ca4-4179-b79b-a0ffd5c2c60b"
      },
      "ResponseBody": {
        "name": "net62474f",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "48eb50a0-1ebc-4f81-bfec-0dae07d32fe5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "subnet1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "etag": "W/\u0022a24dad6a-1e0b-4da5-a350-a542d0efd498\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/22",
                "routeTable": {
                  "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "710",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:29 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "200ebacc-5e65-4b65-9aad-98ae60df0e64",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus",
        "tags": {},
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "properties": {
                "addressPrefix": "10.0.0.0/22",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "name": "subnet1",
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/58690477-98c4-4ec7-a9fd-6591799936a2?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "992",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:29 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d4161e11-f9ee-4d48-88c2-768a9db59e16",
        "x-ms-client-request-id": "200ebacc-5e65-4b65-9aad-98ae60df0e64",
        "x-ms-correlation-request-id": "ee37fb83-48c0-42d6-bc23-7ab2ca382097",
        "x-ms-ratelimit-remaining-subscription-writes": "1178",
        "x-ms-request-id": "58690477-98c4-4ec7-a9fd-6591799936a2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060930Z:ee37fb83-48c0-42d6-bc23-7ab2ca382097"
      },
      "ResponseBody": {
        "name": "net62474f",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "etag": "W/\u0022df76d0d6-6d54-47a7-bf6f-c3c284a862c7\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "48eb50a0-1ebc-4f81-bfec-0dae07d32fe5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "subnet1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "etag": "W/\u0022df76d0d6-6d54-47a7-bf6f-c3c284a862c7\u0022",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/22",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/58690477-98c4-4ec7-a9fd-6591799936a2?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:33 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "3b319e32-d47b-48ee-919a-7f541c53314d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:33 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "1ed024d7-2a28-4825-bb26-4f270064471b",
        "x-ms-client-request-id": "3b319e32-d47b-48ee-919a-7f541c53314d",
        "x-ms-correlation-request-id": "084f2938-bc51-40b4-807e-0bf400ab60da",
        "x-ms-ratelimit-remaining-subscription-reads": "11969",
        "x-ms-request-id": "8525f01f-2464-43b5-bbb7-7872d6d5459a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060934Z:084f2938-bc51-40b4-807e-0bf400ab60da"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:34 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "49fc8ceb-2916-433d-ba56-d10a6e234818",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "994",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:34 GMT",
        "ETag": "W/\u00227e37104a-a3d8-440c-96c8-90cec407d991\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "98fafe87-755b-4e12-b8e3-5c6898dd92e8",
        "x-ms-client-request-id": "49fc8ceb-2916-433d-ba56-d10a6e234818",
        "x-ms-correlation-request-id": "7fc120d3-c457-4414-b5cc-d5ae42b442c9",
        "x-ms-ratelimit-remaining-subscription-reads": "11900",
        "x-ms-request-id": "89a1b913-a1a6-4788-bdca-6553a8a85189",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060934Z:7fc120d3-c457-4414-b5cc-d5ae42b442c9"
      },
      "ResponseBody": {
        "name": "net62474f",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f",
        "etag": "W/\u00227e37104a-a3d8-440c-96c8-90cec407d991\u0022",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "tags": {},
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "48eb50a0-1ebc-4f81-bfec-0dae07d32fe5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/22"
            ]
          },
          "dhcpOptions": {
            "dnsServers": []
          },
          "subnets": [
            {
              "name": "subnet1",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/virtualNetworks/net62474f/subnets/subnet1",
              "etag": "W/\u00227e37104a-a3d8-440c-96c8-90cec407d991\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/22",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:34 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "70e6aced-abc9-4a9a-bfd6-537823eba532",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "2120",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:34 GMT",
        "ETag": "W/\u002228c0358f-0efc-4d83-9b03-8b88d6a48557\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "de5d58ad-6844-469a-b742-b2bf022dddab",
        "x-ms-client-request-id": "70e6aced-abc9-4a9a-bfd6-537823eba532",
        "x-ms-correlation-request-id": "187d60ce-d391-4477-be0b-0ccb8d167803",
        "x-ms-ratelimit-remaining-subscription-reads": "11898",
        "x-ms-request-id": "42fc496c-5035-48da-9c83-2749e8a709ba",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060934Z:187d60ce-d391-4477-be0b-0ccb8d167803"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u002228c0358f-0efc-4d83-9b03-8b88d6a48557\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u002228c0358f-0efc-4d83-9b03-8b88d6a48557\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "50.46.112.0/29",
                "nextHopType": "Internet",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route3",
              "etag": "W/\u002228c0358f-0efc-4d83-9b03-8b88d6a48557\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.2.0/29",
                "nextHopType": "None",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u002228c0358f-0efc-4d83-9b03-8b88d6a48557\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351764425",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351764425",
              "etag": "W/\u002228c0358f-0efc-4d83-9b03-8b88d6a48557\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.5.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "PATCH",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "42",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:35 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "373de0f6-9102-44a0-a8cc-145f504b6a8f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "tags": {
          "tag2": "value2",
          "tag3": "value3"
        }
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "Cache-Control": "no-cache",
        "Content-Length": "2120",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:35 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "371b7b48-c06f-45dd-8d85-8a1eb796dd4e",
        "x-ms-client-request-id": "373de0f6-9102-44a0-a8cc-145f504b6a8f",
        "x-ms-correlation-request-id": "7d65fc1d-b75a-4555-af06-8409c0db6b50",
        "x-ms-ratelimit-remaining-subscription-writes": "1177",
        "x-ms-request-id": "cc22f67c-0f56-4050-a3cf-f33e12dd9487",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060936Z:7d65fc1d-b75a-4555-af06-8409c0db6b50"
      },
      "ResponseBody": {
        "name": "rt535819",
        "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819",
        "etag": "W/\u0022d0312c17-e4e7-4b8e-babe-10c09ed21c01\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {
          "tag2": "value2",
          "tag3": "value3"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "d8dde5f6-4ef0-4f79-a99f-12986944fde7",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "route2",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route2",
              "etag": "W/\u0022d0312c17-e4e7-4b8e-babe-10c09ed21c01\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "50.46.112.0/29",
                "nextHopType": "Internet",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route3",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route3",
              "etag": "W/\u0022d0312c17-e4e7-4b8e-babe-10c09ed21c01\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.2.0/29",
                "nextHopType": "None",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351746933",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351746933",
              "etag": "W/\u0022d0312c17-e4e7-4b8e-babe-10c09ed21c01\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/29",
                "nextHopType": "VnetLocal",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "route_rt5358191690351764425",
              "id": "/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819/routes/route_rt5358191690351764425",
              "etag": "W/\u0022d0312c17-e4e7-4b8e-babe-10c09ed21c01\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.5.0/29",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "10.1.1.1",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg84610f/providers/Microsoft.Network/routeTables/rt535819?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:36 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "ae460c7b-3836-45e7-ab37-ff69c608638a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/d6b33363-5508-48c2-85a9-7773fda30848?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 26 Jul 2023 06:09:36 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operationResults/d6b33363-5508-48c2-85a9-7773fda30848?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0e1a5df2-7bf4-4b59-9078-302aeeda83cc",
        "x-ms-client-request-id": "ae460c7b-3836-45e7-ab37-ff69c608638a",
        "x-ms-correlation-request-id": "9b5dc03a-ed7c-4678-a10c-097222bec330",
        "x-ms-ratelimit-remaining-subscription-deletes": "14993",
        "x-ms-request-id": "d6b33363-5508-48c2-85a9-7773fda30848",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060937Z:9b5dc03a-ed7c-4678-a10c-097222bec330"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/d6b33363-5508-48c2-85a9-7773fda30848?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:39 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "3db691b8-8708-4791-83dc-fd9f8afd4ed9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:39 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "49d58914-7543-4da1-bd9a-396d0bd242ae",
        "x-ms-client-request-id": "3db691b8-8708-4791-83dc-fd9f8afd4ed9",
        "x-ms-correlation-request-id": "47d6ece5-9357-46a4-9aae-1b4f436e2ecb",
        "x-ms-ratelimit-remaining-subscription-reads": "11972",
        "x-ms-request-id": "c7ba75dc-917e-494e-a25f-a8ee5adf3b69",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060939Z:47d6ece5-9357-46a4-9aae-1b4f436e2ecb"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/d6b33363-5508-48c2-85a9-7773fda30848?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Date": "Wed, 26 Jul 2023 06:09:39 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.network/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "41742a92-e781-452a-99e3-b75d6fe97a79",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 204,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operations/d6b33363-5508-48c2-85a9-7773fda30848?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 26 Jul 2023 06:09:39 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/providers/Microsoft.Network/locations/westus/operationResults/d6b33363-5508-48c2-85a9-7773fda30848?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0e1a5df2-7bf4-4b59-9078-302aeeda83cc",
        "x-ms-client-request-id": "ae460c7b-3836-45e7-ab37-ff69c608638a",
        "x-ms-correlation-request-id": "9b5dc03a-ed7c-4678-a10c-097222bec330",
        "x-ms-ratelimit-remaining-subscription-reads": "11994",
        "x-ms-request-id": "d6b33363-5508-48c2-85a9-7773fda30848",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060940Z:5005e8ed-ff3f-487b-87e4-9dd8f961311e"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://REDACTED/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/rg84610f?api-version=2022-09-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "0",
        "Content-Type": "application/json",
        "Date": "Wed, 26 Jul 2023 06:09:40 GMT",
        "User-Agent": "azsdk-java-com.azure.resourcemanager.resources/2.29.0-beta.1 (17.0.1; Windows 11; 10.0)",
        "x-ms-client-request-id": "ff03c5fc-8151-4303-8b0d-5a07cfb6c492",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 26 Jul 2023 06:09:44 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/ec0aa5f7-9e78-40c9-85cd-535c6305b380/operationresults/eyJqb2JJZCI6IlJFU09VUkNFR1JPVVBERUxFVElPTkpPQi1SRzg0NjEwRi1XRVNUVVMiLCJqb2JMb2NhdGlvbiI6Indlc3R1cyJ9?api-version=2022-09-01",
        "Pragma": "no-cache",
        "Retry-After": "0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "430de61d-7dae-42a5-9f8e-e313d140183f",
        "x-ms-ratelimit-remaining-subscription-deletes": "14997",
        "x-ms-request-id": "430de61d-7dae-42a5-9f8e-e313d140183f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230726T060945Z:430de61d-7dae-42a5-9f8e-e313d140183f"
      },
      "ResponseBody": null
    }
  ],
  "Variables": {
    "0": "net62474f",
    "1": "rt535819",
    "2": "rg84610f"
  }
}
